--- a/SimpleCar/SimpleCar/SimpleCar.vcxproj.filters
+++ b/SimpleCar/SimpleCar/SimpleCar.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClInclude Include="..\..\include\vmWishboneCar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\..\..\..\..\dev\ode-0.13\drawstuff\src\resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -46,7 +49,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="..\..\..\..\..\..\..\dev\ode-0.13\drawstuff\src\resources.rc">
+    <ResourceCompile Include="c:\dev\ode-0.13\drawstuff\src\resources.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
